--- a/src/web/scss/directives/cp-checkout-review.scss
+++ b/src/web/scss/directives/cp-checkout-review.scss
@@ -62,7 +62,7 @@
     }
 }
 
-cp-package-card {
+.cp-checkout-review-detail cp-package-card {
     margin-bottom: $cp-margin-base-vertical;
 
     .cp-package-card-image {
