Tweak what triggers a new search request.

--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -43,9 +43,8 @@
                         id="delivery_location"
                         type="text"
                         placeholder="POSTCODE"
-                        ng-keypress="blurIfEnterKey($event)"
-                        ng-model="search.postcode"
-                        ng-model-options="{debounce: 1000}" />
+                        ng-keypress="searchAndBlurIfEnterKey($event)"
+                        ng-model="search.postcode" />
                 </div>
 
                 <div class="cp-form-group col-md-3">
