--- a/src/web/templates/general/staff-nav-menu-items.html
+++ b/src/web/templates/general/staff-nav-menu-items.html
@@ -12,6 +12,7 @@
     <ul class="cp-nav-menu-my-account" role="menu">
         <li><a href="/admin/vendors/edit">Edit vendors</a></li>
         <li><a href="/admin/packages/edit">Edit packages</a></li>
+        <li><a href="/admin/packages/delivery-radii">Edit delivery radii</a></li>
         <li><a href="/logout">Log out</a></li>
     </ul>
 </li>
