--- a/src/web/templates/general/checkout-catering-details.html
+++ b/src/web/templates/general/checkout-catering-details.html
@@ -26,7 +26,7 @@
                     </div>
 
                     <div class="cp-form-group">
-                        <label class="cp-form-label" for="dietary_requirements_extra">Do you have specific dietary requirements for your team?</label>
+                        <label class="cp-form-label" for="dietary_requirements_extra">Do you have any other dietary requirements in your group?</label>
                         <textarea class="cp-form-control"
                             id="dietary_requirements_extra"
                             name="dietaryRequirementsExtra"
