Change heading wording on delivery page.

--- a/src/web/templates/general/checkout-delivery-details.html
+++ b/src/web/templates/general/checkout-delivery-details.html
@@ -7,7 +7,7 @@
         <div class="cp-checkout-main">
             <h1 class="cp-heading cp-checkout-heading">Delivery address</h1>
 
-            <p ng-if="isNewDeliveryAddress">Let us know to which address {{ package.vendor.name }} should deliver your meal.</p>
+            <p ng-if="isNewDeliveryAddress">Where do you want your food delivered?</p>
 
             <cp-checkout-address-form address="address" ng-if="isNewDeliveryAddress"></cp-checkout-address-form>
 
