--- a/src/web/templates/customer/dashboard.html
+++ b/src/web/templates/customer/dashboard.html
@@ -53,7 +53,7 @@
 
                         <div class="cp-form-group col-md-5">
                             <label class="cp-form-label" for="search_new_postcode">
-                                Enter new delivery postcode
+                                Enter new delivery postcode<span class="cp-asterisk-required">*</span>
                                 <span class="form-element-invalid" ng-show="dashboardForm.$submitted && dashboardForm.searchNewPostcode.$error.pattern">Postcode is invalid</span>
                                 <span class="form-element-invalid" ng-show="dashboardForm.$submitted && dashboardForm.searchNewPostcode.$error.required">Postcode is required</span>
                             </label>
