--- a/src/web/templates/directives/cp-header.html
+++ b/src/web/templates/directives/cp-header.html
@@ -3,7 +3,7 @@
         <button type="button" class="cp-button-nav-menu" ng-click="togglePresentNavMenu()" data-target="#bs-example-navbar-collapse-1">
             Menu
         </button>
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" ng-click="decideLogoLink()">
             <img class="cp-logo" src="/dist/images/cp_logo.png" alt="City Pantry" />
         </a>
     </div>
