--- a/src/web/templates/general/default-nav-menu-items.html
+++ b/src/web/templates/general/default-nav-menu-items.html
@@ -1,9 +1,8 @@
-<li><a href="/login">Log in / sign up</a></li>
-<li><a href="{{ hubspotBase }}/faq">FAQ</a></li>
-<li><a href="/quote">Event quote</a></li>
+<li><a href="http://citypantry.com/how-it-works">How it works</a></li>
 <li>
     <a class="cp-call-us" href="tel:{{ phoneNumberInternational }}">
         <img src="/dist/images/icons/telephone.svg" width="33" height="27" />
         <div class="cp-call-us-number">{{ phoneNumberUk }}</div>
     </a>
 </li>
+<li><a class="cp-btn cp-btn-primary cp-btn-sm cp-btn-block btn-login-green" href="/login">Log in</a></li>
