--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -75,12 +75,10 @@
                         </label>
                     </fieldset>
                 </div>
-                <div class="col-md-2">
-                    <button class="btn btn-primary" ng-click="clearAllFilters()">Clear all</button>
-                </div>
             </div>
         </fieldset>
 
+        <button class="cp-btn cp-btn-link cp-search-clear-all" ng-click="clearAllFilters()">Clear all</button>
         <button class="cp-btn cp-btn-link cp-search-advanced-search" type="button" ng-click="isAdvancedSearchVisible = !isAdvancedSearchVisible">Advanced search</button>
     </form>
 
