Fix back to search button on packages.

--- a/src/web/templates/general/view-package.html
+++ b/src/web/templates/general/view-package.html
@@ -103,7 +103,7 @@
                 </p>
             </section>
 
-            <button class="cp-btn cp-btn-link" type="button" cp-back>Back to search results</button>
+            <button class="cp-btn cp-btn-link" type="button" cp-back cp-search-button="true">Back to search results</button>
         </article>
 
         <div class="cp-package-sidebar">
