Restyle vendors page.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -1002,6 +1002,7 @@ hr {
 @import 'customer/account-details.scss';
 @import 'customer/order-leave-a-review.scss';
 @import 'customer/search.scss';
+@import 'customer/vendors.scss';
 @import 'customer/view-package.scss';
 @import 'vendor/delivery-radiuses.scss';
 @import 'vendor/orders.scss';
