Remove optional wording from company name.

--- a/src/web/templates/auth/register.html
+++ b/src/web/templates/auth/register.html
@@ -14,7 +14,7 @@
             </div>
 
             <div class="cp-form-group">
-                <label class="cp-form-label" for="registerCompany">Company name (optional)</label>
+                <label class="cp-form-label" for="registerCompany">Company name</label>
                 <input class="cp-form-control" id="registerCompany" name="registerCompany"
                     ng-model="company" />
             </div>
