--- a/src/web/scss/partials/_cp-dashboard.scss
+++ b/src/web/scss/partials/_cp-dashboard.scss
@@ -61,6 +61,18 @@
         margin-bottom: $cp-margin-small-vertical;
     }
 
+    .cp-package-card {
+        &:hover,
+        &:focus,
+        &:active {
+            .cp-package-card-image::before,
+            .cp-package-card-image::after,
+            .cp-package-card-notice {
+                display: none;
+            }
+        }
+    }
+
     .cp-package-card-price {
         display: block !important;
     }
