Misc updates to admin orders page.

--- a/src/web/templates/admin/orders.html
+++ b/src/web/templates/admin/orders.html
@@ -9,5 +9,5 @@
         <button ng-click="clearAllFilters()" class="btn btn-primary">Clear all filters</button>
     </p>
 
-    <div ui-grid="orders.gridOptions" ui-grid-pagination id="orders-table"></div>
+    <div ui-grid="orders.gridOptions" ui-grid-pagination id="orders-table" style="height: 780px;"></div>
 </div>
