--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -149,7 +149,7 @@
             </ul>
         </div>
 
-        <div class="col-sm-3 col-xs-6" ng-repeat="package in packages | limitTo:packagesLimit" ng-show="!isSearching" package="package" cp-package-card></div>
+        <div class="col-sm-3 col-xs-6" ng-repeat="package in packages | limitTo:packagesLimit" ng-show="!isSearching" package="package" show-order-now-button-on-hover="true" cp-package-card></div>
     </div>
 
     <div class="text-center">
