--- a/src/web/scss/partials/_cp-checkout.scss
+++ b/src/web/scss/partials/_cp-checkout.scss
@@ -232,23 +232,9 @@
 .cp-checkout-thank-you {
     text-align: center;
 
-    cp-package-card {
-        margin-bottom: $cp-margin-base-vertical;
-    }
-
     .cp-package-card {
-        margin: 0 auto;
+        margin: 0 auto $cp-margin-base-vertical;
         width: 216px;
-
-        &:hover,
-        &:focus,
-        &:active {
-            .cp-package-card-image::before,
-            .cp-package-card-image::after,
-            .cp-package-card-notice {
-                display: none;
-            }
-        }
 
         .cp-package-card-image {
             border-radius: 50%;
@@ -256,7 +242,6 @@
         }
 
         .cp-package-card-info {
-            height: auto;
             width: 100%;
         }
 
