--- a/src/web/templates/general/view-vendor.html
+++ b/src/web/templates/general/view-vendor.html
@@ -4,7 +4,7 @@
             <h1 class="cp-heading">Packages</h1>
 
             <div class="row">
-                <div class="col-xs-6" ng-repeat="package in packages" package="package" cp-package-card></div>
+                <div class="col-xs-6" ng-repeat="package in packages" package="package" show-order-now-button-on-hover="true" cp-package-card></div>
             </div>
         </div>
         <div class="cp-vendor-sidebar">
