Accomodate CVC values that begin with zero(s).

--- a/src/web/templates/general/checkout-payment.html
+++ b/src/web/templates/general/checkout-payment.html
@@ -96,7 +96,7 @@
                         </label>
                         <input class="cp-form-control"
                             id="card_cvc"
-                            type="number"
+                            type="text"
                             autocomplete="off"
                             required
                             aria-required="true"
