--- a/src/web/templates/user/new-payment-card.html
+++ b/src/web/templates/user/new-payment-card.html
@@ -48,7 +48,7 @@
                             <a href="#" data-toggle="tooltip" title="Last 3 digits on the back">?</a>
                         </label>
 
-                        <input class="cp-form-control" id="card-cvc" type="number" size="4"
+                        <input class="cp-form-control" id="card-cvc" type="text" size="4"
                             autocomplete="off" ng-pattern="/\d\d\d/" required data-braintree-name="cvc"
                             ng-minlength="3" ng-maxlength="4" maxlength="4" ng-model="card.cvc" />
                     </div>
