Login modal for A/B test users who try to view a package.

--- a/src/web/scss/customer/view-package.scss
+++ b/src/web/scss/customer/view-package.scss
@@ -18,3 +18,14 @@
         width: 29%;
     }
 }
+
+#cp-view-package-login-modal {
+    .cp-login {
+        margin-top: 40px;
+        padding-bottom: 40px;
+    }
+
+    fieldset .cp-form-group {
+        margin-bottom: 12px;
+    }
+}
