--- a/src/web/templates/general/view-package.html
+++ b/src/web/templates/general/view-package.html
@@ -1,3 +1,49 @@
+<div class="cp-modal open" ng-show="!isLoggedIn">
+    <div class="cp-modal-dialog">
+        <div class="cp-modal-content" ng-controller="LoginRegisterController" id="cp-view-package-login-modal">
+            <div class="cp-login">
+                <h1 class="cp-login-heading">Log in to your account</h1>
+
+                <p class="cp-form-error" ng-show="loginError" ng-bind="loginError"></p>
+
+                <form class="cp-form cp-login-form" role="form" ng-submit="login()">
+                    <fieldset>
+                        <div class="cp-form-group">
+                            <label class="cp-form-label" for="login_email">Email</label>
+                            <input class="cp-form-control" id="login_email" name="loginEmail" type="email" required aria-required="true" ng-model="email" />
+                        </div>
+
+                        <div class="row">
+                            <div class="cp-form-group col-xs-8">
+                                <label class="cp-form-label" for="login_password">Password</label>
+                                <input class="cp-form-control" id="login_password" name="loginPassword" type="password" required aria-required="true" ng-model="plainPassword" />
+                            </div>
+
+                            <div class="cp-login-log-in col-xs-4">
+                                <input class="cp-btn cp-btn-primary cp-btn-sm cp-btn-block" type="submit" value="Log in" />
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="cp-checkbox cp-login-remember-me col-xs-5">
+                                <label>
+                                    <input name="loginRemember" type="checkbox" checked value="true" ng-model="rememberMe" /> Remember me
+                                </label>
+                            </div>
+
+                            <div class="col-xs-5">
+                                <a class="cp-login-forgot-password" href="/forgot-password">Forgot password?</a>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+
+                <a class="cp-btn cp-btn-default cp-btn-block cp-login-sign-up" href="/register">New to City Pantry? <span>Sign up</span></a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <div class="cp-package">
         <article class="cp-package-main">
@@ -109,7 +155,8 @@
         <div class="cp-package-sidebar">
             <p class="cp-form-error" ng-show="packageFormError" ng-bind="packageFormError"></p>
 
-            <form class="cp-form cp-package-form" name="packageForm" novalidate role="form" ng-submit="order()">
+            <form class="cp-form cp-package-form" name="packageForm" novalidate role="form" ng-submit="order()"
+                    ng-show="isLoggedIn">
                 <fieldset>
                     <div class="cp-form-group">
                         <label class="cp-form-label" for="order_postcode">
@@ -186,7 +233,7 @@
 
 <div class="cp-modal-backdrop" ng-if="isChangeDeliveryLocationModalOpen"></div>
 
-<div class="cp-modal" ng-class="{open: isChangeDeliveryLocationModalOpen}">
+<div class="cp-modal cp-delivery-location-modal" ng-class="{open: isChangeDeliveryLocationModalOpen}">
     <div class="cp-modal-dialog">
         <div class="cp-modal-content">
             <div class="cp-modal-header">
