Order stats page for staff.

--- a/src/web/templates/general/staff-nav-menu-items.html
+++ b/src/web/templates/general/staff-nav-menu-items.html
@@ -13,6 +13,7 @@
         <li><a href="/admin/vendors/edit">Edit vendors</a></li>
         <li><a href="/admin/packages/edit">Edit packages</a></li>
         <li><a href="/admin/packages/delivery-radii">Edit delivery radii</a></li>
+        <li><a href="/admin/orders/stats">Orders stats</a></li>
         <li><a href="/logout">Log out</a></li>
     </ul>
 </li>
