Fix can’t click into city in address form.

--- a/src/web/scss/directives/cp-address-form.scss
+++ b/src/web/scss/directives/cp-address-form.scss
@@ -5,4 +5,8 @@ cp-address-form {
         float: left;
         margin-right: 20px;
     }
+
+    #form-group-postcode {
+        float: left;
+    }
 }
