--- a/src/web/templates/directives/cp-address-form-for-vendor.html
+++ b/src/web/templates/directives/cp-address-form-for-vendor.html
@@ -47,7 +47,7 @@
             ng-model="address.city" size="20" />
     </div>
 
-    <div class="cp-form-group">
+    <div class="cp-form-group" id="form-group-postcode">
         <label class="cp-form-label" for="postcode">
             Postcode
             <span class="form-element-invalid" ng-show="form.$submitted && form.postcode.$error.required">(Postcode is required.)</span>
