Meal Plan create account.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -16,6 +16,7 @@
 @import 'partials/cp-dashboard';
 @import 'partials/cp-checkout';
 @import 'partials/cp-vendor';
+@import 'partials/cp-meal-plan';
 
 /**
  * Misc
