Changes based on feedback.

--- a/src/web/templates/auth/meal-plan-create-account.html
+++ b/src/web/templates/auth/meal-plan-create-account.html
@@ -20,7 +20,7 @@
                 </div>
 
                 <input class="cp-btn cp-btn-primary" type="submit" value="Create" />
-                <button class="cp-btn cp-btn-link" type="button" ng-click="Continue()">Not now</button>
+                <button class="cp-btn cp-btn-link" type="button" ng-click="continue()">Not now</button>
             </fieldset>
         </form>
     </div>
