--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -998,6 +998,7 @@ hr {
 }
 
 @import 'directives/cp-package-card.scss';
+@import 'directives/cp-review-card.scss';
 @import 'admin/general.scss';
 @import 'customer/account-details.scss';
 @import 'customer/order-leave-a-review.scss';
