--- a/src/web/templates/admin/edit-package.html
+++ b/src/web/templates/admin/edit-package.html
@@ -11,6 +11,12 @@
 
     <cp-history-table document-id="vendorPackage.id" document-type="CityPantry\PackageBundle\Document\Package"></cp-history-table>
 
+    <h2>Review history</h2>
+
+    <cp-review-card ng-repeat="review in reviews" review="review"></cp-review-card>
+
+    <p ng-show="reviews.length === 0">No reviews.</p>
+
     <h2>Edit details</h2>
 
     <form ng-submit="save()" role="form">
