Change review card background colour.

--- a/src/web/scss/directives/cp-review-card.scss
+++ b/src/web/scss/directives/cp-review-card.scss
@@ -1,6 +1,5 @@
 .cp-review-card {
-    border: solid 8px #f0f;
-    background-color: #f8f;
+    border: solid 8px #ccc;
     width: 47%;
     margin-bottom: 4px;
 
