--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -105,6 +105,14 @@
             n.id=i;n.src='//js.hs-analytics.net/analytics/'+(Math.ceil(new Date()/r)*r)+'/481217.js';
             e.parentNode.insertBefore(n, e);
             })(document,"script","hs-analytics",300000);
+
+            var _hsq = _hsq || [];
+
+            {% if user %}
+                _hsq.push(['identify', {
+                    email: '{{ user.user.email }}'
+                }]);
+            {% endif %}
             </script>
             <!-- End of Async HubSpot Analytics Code -->
         {% endif %}
