--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html class="no-js lt-ie10 ie9"> <![endif]-->
 <!--[if gt IE 9]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
-        {% if includeAnalyticsJs %}
+        {% if includeAnalyticsJs and not isStaff %}
         <script>
             // KISSmetrics
             var _kmq = _kmq || [];
@@ -46,7 +46,7 @@
 
         <script src="//use.fonticons.com/1518eb00.js"></script>
 
-        {% if includeAnalyticsJs %}
+        {% if includeAnalyticsJs and not isStaff %}
             <script>
                 // Lucky Orange.
                 window.__wtw_lucky_site_id = 21550;
@@ -58,7 +58,7 @@
             </script>
         {% endif %}
 
-        {% if includeAnalyticsJs %}
+        {% if includeAnalyticsJs and not isStaff %}
             <script>
                 // Google Analytics
                 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -77,6 +77,7 @@
             window.googleMapsJavascriptApiV3Key = '{{ googleMapsJavascriptApiV3Key }}';
             window.cacheBusterValue = '{{ cacheBusterValue }}';
             window.includeAnalyticsJs = {{ includeAnalyticsJs ? 'true' : 'false' }};
+            window.isStaff = {{ isStaff ? 'true' : 'false' }};
             window.FileAPI = {
                 jsUrl: '/dist/ng-file-upload/FileAPI.min.js',
                 flashUrl: '/dist/ng-file-upload/FileAPI.flash.swf'
@@ -96,7 +97,7 @@
 
         {% include 'default-layout/notification-modal.html.twig' %}
 
-        {% if includeAnalyticsJs %}
+        {% if includeAnalyticsJs and not isStaff %}
             <!-- Start of Async HubSpot Analytics Code -->
             <script type="text/javascript">
             (function(d,s,i,r) {
@@ -117,7 +118,7 @@
             <!-- End of Async HubSpot Analytics Code -->
         {% endif %}
 
-        {% if includeAnalyticsJs and includeRegistrationTrackingCode %}
+        {% if includeAnalyticsJs and includeRegistrationTrackingCode and not isStaff %}
             <!-- Google AdWords registration. -->
             <div style="display:inline;">
             <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/973394162/?value=0&amp;currency_code=GBP&amp;label=IKapCI3EtVwQ8qGT0AM&amp;guid=ON&amp;script=0"/>
